--- a/app/src/main/res/layout/activity_add_student.xml
+++ b/app/src/main/res/layout/activity_add_student.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.laiscouto.eduedu.AddStudentActivity">
+    tools:context="com.laisCouto.eduedu.view.AddStudentActivity">
 
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/toolbar"
@@ -26,7 +26,7 @@
     </com.google.android.material.appbar.AppBarLayout>
 
     <ImageView
-        android:layout_width="46dp"
+        android:layout_width="41dp"
         android:layout_height="35dp"
         android:layout_marginStart="4dp"
         android:layout_marginTop="12dp"
@@ -42,7 +42,7 @@
         android:ems="10"
         android:padding="16dp"
         android:inputType="textEmailAddress"
-        android:id="@+id/name_add"
+        android:id="@+id/name_ad"
         android:layout_width="match_parent"
         android:layout_height="60dp"
         app:layout_constraintTop_toBottomOf="@id/toolbar"
@@ -57,8 +57,8 @@
         android:text="@string/name"
         android:textColor="@color/blue_clear"
         android:layout_marginBottom="52dp"
-        app:layout_constraintBottom_toBottomOf="@id/name_add"
-        app:layout_constraintStart_toStartOf="@id/name_add"
+        app:layout_constraintBottom_toBottomOf="@id/name_ad"
+        app:layout_constraintStart_toStartOf="@id/name_ad"
         android:textSize="12sp"
         />
 
@@ -66,7 +66,7 @@
         android:id="@+id/img_studant"
         android:layout_width="160dp"
         android:layout_height="160dp"
-        app:layout_constraintTop_toBottomOf="@id/name_add"
+        app:layout_constraintTop_toBottomOf="@id/name_ad"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:background="@color/blue_clear"
