--- a/app/src/main/res/layout/activity_search_student.xml
+++ b/app/src/main/res/layout/activity_search_student.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.laiscouto.eduedu.SearchStudentActivity">
+    tools:context="com.laisCouto.eduedu.view.SearchStudentActivity">
 
     <TextView
         android:id="@+id/text_select_stundent"
